--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,7 +9,7 @@
 @using UtiliExtract
 @using UtiliExtract.Layout
 @using BlazorBootstrap;
-@using Helpers
-@using Shared
-@using Models
+@using UtiliExtract.Helpers
+@using UtiliExtract.Shared
+@using UtiliExtract.Models
 @inject ToastHostService ToastService
