--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -19,8 +19,8 @@
 
         <!-- Calendar -->
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="billreader">
-                <span class="bi bi-filetype-pdf-nav-menu" aria-hidden="true"></span> Bill Reader
+            <NavLink class="nav-link" href="upload-bills">
+                <span class="bi bi-filetype-pdf-nav-menu" aria-hidden="true"></span> Upload Bills
             </NavLink>
         </div>
     </nav>
