City of Vancouver Water Bill added

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -25,6 +25,8 @@
                         <li class="list-group-item">FortisBC Gas (Direct Energy)</li>
                         <li class="list-group-item">BC Hydro</li>
                         <li class="list-group-item">Enmax</li>
+                        <li class="list-group-item">CreativEnergy</li>
+                        <li class="list-group-item">City Of Vancouver (Water)</li>
                     </ul>
                     <p class="text-muted small">
                         Note: This is a front-end application. Third-party integration must be configured separately.
