FortisBC charges (excluding GST)

--- a/Pages/UploadBills.razor
+++ b/Pages/UploadBills.razor
@@ -180,9 +180,9 @@
                                                     </div>
 
                                                     <div class="mb-1 row">
-                                                        <label class="col-4 col-form-label fw-bold">Cost (Total - GST):</label>
+                                                        <label class="col-4 col-form-label fw-bold">Charges (excluding GST):</label>
                                                         <div class="col-8">
-                                                            <InputNumber @bind-Value="item.Cost" class="form-control" />
+                                                            <InputNumber @bind-Value="item.Charges" class="form-control" />
                                                         </div>
                                                     </div>
 
