fix: preview large PDFs

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -28,6 +28,7 @@
                         <li class="list-group-item">CreativEnergy</li>
                         <li class="list-group-item">City Of Vancouver (Water)</li>
                         <li class="list-group-item">City Of Williams Lake (Water)</li>
+                        <li class="list-group-item">City Of Kelowna (Water)</li>
                     </ul>
                     <p class="text-muted small">
                         Note: This is a front-end application. Third-party integration must be configured separately.
